--- a/api.appstore/api.appstore/Web.config
+++ b/api.appstore/api.appstore/Web.config
@@ -60,8 +60,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="appStoreEntities" connectionString="metadata=res://*/Models.AppStore.csdl|res://*/Models.AppStore.ssdl|res://*/Models.AppStore.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=appStore;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <!--<add name="MususAppEntities" connectionString="metadata=res://*/Models.AppStore.csdl|res://*/Models.AppStore.ssdl|res://*/Models.AppStore.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=musstore.database.windows.net,1433;Initial Catalog=mususapp;Persist Security Info=False;User ID={your_username};Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+  <add name="MususAppEntities" connectionString="metadata=res://*/Models.AppStore.csdl|res://*/Models.AppStore.ssdl|res://*/Models.AppStore.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=musstore.database.windows.net;initial catalog=mususapp;persist security info=True;user id=da;password=N0tepAd@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
