BUg fix for qr code

--- a/api.appstore/api.appstore/api.appstore.csproj
+++ b/api.appstore/api.appstore/api.appstore.csproj
@@ -188,6 +188,8 @@
       <DependentUpon>AppStore.edmx</DependentUpon>
     </Content>
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\ApiMorrisonStore - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\ApiMorrisonStore - Web Deploy %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\ApiMorrisonStore - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
