--- a/api.appstore/api.appstore/Web.config
+++ b/api.appstore/api.appstore/Web.config
@@ -14,6 +14,7 @@
     <add key="jwtValidity" value="4" />
     <add key="SaltKey" value="MUSRegistration" />
     <add key="SFApiLink" value="http://ssb-swcmrcompletionsurvey.cs86.force.com/workmobile/services/apexrest/" />
+    <add key="webStore" value="https://apimorrisonstore.azurewebsites.net/"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
