--- a/api.appstore/api.appstore/Web.config
+++ b/api.appstore/api.appstore/Web.config
@@ -75,4 +75,9 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+  <security>
+    <requestFiltering>
+      <requestLimits maxAllowedContentLength="2147483648" /> 
+    </requestFiltering>
+  </security>
   </system.webServer></configuration>
