--- a/api.appstore/api.appstore/Web.config
+++ b/api.appstore/api.appstore/Web.config
@@ -18,7 +18,7 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.6.1" />
+    <httpRuntime targetFramework="4.6.1" maxRequestLength="2147483648"/>
   </system.web>
   
   <runtime>
