--- a/api.appstore/api.appstore/Web.config
+++ b/api.appstore/api.appstore/Web.config
@@ -18,9 +18,9 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.6.1" maxRequestLength="2147483648"/>
+    <httpRuntime targetFramework="4.6.1" maxRequestLength="214748364"/>
   </system.web>
-  
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -57,7 +57,8 @@
   </system.codedom>
   <connectionStrings>
     <!--<add name="MususAppEntities" connectionString="metadata=res://*/Models.AppStore.csdl|res://*/Models.AppStore.ssdl|res://*/Models.AppStore.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=musstore.database.windows.net,1433;Initial Catalog=mususapp;Persist Security Info=False;User ID={your_username};Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-  <add name="MususAppEntities" connectionString="metadata=res://*/Models.AppStore.csdl|res://*/Models.AppStore.ssdl|res://*/Models.AppStore.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=musstore.database.windows.net;initial catalog=mususapp;persist security info=True;user id=da;password=N0tepAd@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="MususAppEntities" connectionString="metadata=res://*/Models.AppStore.csdl|res://*/Models.AppStore.ssdl|res://*/Models.AppStore.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=musstore.database.windows.net;initial catalog=mususapp;persist security info=True;user id=da;password=N0tepAd@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -68,16 +69,17 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<system.webServer>
+  <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-  <security>
-    <requestFiltering>
-      <requestLimits maxAllowedContentLength="2147483648" /> 
-    </requestFiltering>
-  </security>
-  </system.webServer></configuration>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="2147483648" />
+      </requestFiltering>
+    </security>
+  </system.webServer>
+</configuration>
