--- a/api.appstore/api.appstore/packages.config
+++ b/api.appstore/api.appstore/packages.config
@@ -7,6 +7,9 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
+  <package id="Microsoft.Azure.Storage.Blob" version="10.0.3" targetFramework="net461" />
+  <package id="Microsoft.Azure.Storage.Common" version="10.0.3" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.4.0" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Logging" version="5.4.0" targetFramework="net461" />
