--- a/api.appstore/api.appstore/Web.config
+++ b/api.appstore/api.appstore/Web.config
@@ -59,7 +59,7 @@
   </system.codedom>
   <connectionStrings>
     <!--<add name="MususAppEntities" connectionString="metadata=res://*/Models.AppStore.csdl|res://*/Models.AppStore.ssdl|res://*/Models.AppStore.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=musstore.database.windows.net,1433;Initial Catalog=mususapp;Persist Security Info=False;User ID={your_username};Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="MususAppEntities" connectionString="metadata=res://*/Models.AppStore.csdl|res://*/Models.AppStore.ssdl|res://*/Models.AppStore.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=musdbascatalog.database.windows.net;initial catalog=ascatalog;user id=musmobdbadmin;password=G5ssOT704tree3!45TYtySeen22#;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MususAppEntities" connectionString="metadata=res://*/Models.AppStore.csdl|res://*/Models.AppStore.ssdl|res://*/Models.AppStore.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=musdbascataloguat.database.windows.net;initial catalog=ascataloguat;user id=musmobuatdbadmin;password=Th15Attempt03Pwd$G3TR3DD1E!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
